samples/_failures_safe/1761540070_ae2bb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_843e2194.c: In function ‘tokenize’:
./samples/SAFE/__tmp_843e2194.c:163:13: error: expected expression at end of input
  163 |             } else
      |             ^
./samples/SAFE/__tmp_843e2194.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_843e2194.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_843e2194.c:163:13: error: expected declaration or statement at end of input
